opam-version: "1.2"
version: "1.0"
maintainer: "ted@spence.net"
authors: ["Ted Spence"]
homepage: "https://github.com/tspence/ocaml-test"
bug-reports: "https://github.com/tspence/ocaml-test/issues"
dev-repo: "https://github.com/tspence/ocaml-test.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only" "download_site" "--root" "." "-j" jobs "@install"]
]
